--- a/packages/react-demo/package.json
+++ b/packages/react-demo/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@demo-mono-repo/react-demo",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "sass": "^1.55.0"
+  }
 }
